HBASE-22741 Show catalogjanitor consistency complaints in new 'HBCK Report' page Signed-off-by: huzheng <openinx@gmail.com> Signed-off-by: Guanghao Zhang <zghao@apache.org>